feat(ui): Redesign theme, add shimmer loading, and improve UX
This commit introduces a major UI overhaul with a new brand identity, modernizes the visual design with a gradient-based theme, and significantly improves the user experience by adding shimmer loading effects, dark mode support, and various other enhancements.

### Key Changes:

-   **New Visual Identity & Theming:**
    -   Implemented a new color palette based on a primary blue-to-red gradient, replacing the old purple and teal theme.
    -   Redefined light and dark mode themes (`themes.xml`, `colors.xml`) with consistent styling for backgrounds, surfaces, text, and components.
    -   Created new app icons (`ic_launcher_foreground.xml`, `ic_launcher_background.xml`) that reflect the new branding.
    -   The `Toolbar` now features a gradient background.

-   **Shimmer Loading Effect:**
    -   Replaced the simple `ProgressBar` on the weather detail screen with a `ShimmerFrameLayout` from Facebook's Shimmer library.
    -   A new layout (`shimmer_weather_detail.xml`) provides a skeleton UI that mimics the final content, offering a much-improved loading experience.

-   **Dark Mode Support:**
    -   The application now automatically follows the system's dark mode setting (`MODE_NIGHT_FOLLOW_SYSTEM`).
    -   Created specific color and theme resources in `values-night` to ensure the UI is consistent and legible in dark mode.

-   **Enhanced Search Screen UX:**
    -   The search input field (`TextInputEditText`) is visually improved with a new gradient start icon (`ic_search_gradient.xml`) and styled box strokes.
    -   Search result items (`item_location_search.xml`) are refined with better padding and a new gradient placeholder icon (`ic_weather_gradient.xml`) for locations without a country flag.
    -   Added extensive logging in `LocationSearchAdapter` to debug flag loading issues from the CDN.

-   **Improved Weather Detail Screen:**
    -   The location name and country are now displayed at the 

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,6 +8,7 @@ espressoCore = "3.7.0"
 appcompat = "1.7.1"
 material = "1.12.0"
 coil = "2.5.0"
+shimmer = "0.5.0"
 recyclerview = "1.3.0"
 constraintlayout = "2.1.4"
 lifecycleLivedataKtx = "2.6.2"
@@ -47,6 +48,7 @@ androidx-navigation-ui-ktx = { group = "androidx.navigation", name = "navigation
 
 # Image Loading
 coil = { group = "io.coil-kt", name = "coil", version.ref = "coil" }
+shimmer = { group = "com.facebook.shimmer", name = "shimmer", version.ref = "shimmer" }
 
 # Networking
 retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
