refactor(ui): Redesign UI, add splash screen, and improve UX
This commit introduces a major user interface and experience overhaul. It replaces the previous UI components with a more modern design, adds a Lottie-based splash screen, and refactors core functionalities for better performance and maintainability. The `Shimmer` library has been removed in favor of `CircularProgressIndicator` and `LinearProgressIndicator` with gradient styling.

### Key Changes:

-   **New Splash Screen:**
    -   Added a new `SplashActivity` as the app's entry point, featuring a Lottie animation (`splash.json`).
    -   The splash screen runs for 2.5 seconds before transitioning to `MainActivity`.
    -   The `AndroidManifest.xml` is updated to set `SplashActivity` as the launcher.

-   **UI Redesign and Simplification:**
    -   **Search Screen (`fragment_search.xml`):** The `MaterialCardView` wrapping the search input has been removed for a cleaner look. The search bar now has rounded corners and custom stroke/hint colors.
    -   **Weather Detail Screen (`fragment_weather_detail.xml`):** Replaced the `ShimmerFrameLayout` with a `CircularProgressIndicator` for loading states. The layout is refined using `ConstraintLayout` for better alignment in both portrait and landscape modes. The "Retry" button is now a styled `ImageView` with a gradient icon (`ic_retry_gradient.xml`).

-   **Country Flag Logic Refactoring:**
    -   Removed the `CountryFlagUtil` and its associated tests. The logic for displaying country flags has been replaced by a simpler `getCountryEmoji()` method within the `Location` model, which maps country names to their corresponding emoji flags.
    -   The `LocationSearchAdapter` now displays these emojis instead of fetching flag images from a CDN, simplifying the code and reducing network requests.

-   **Code and Performance Optimizations:**
    -   **Gradle:** `gradle.properties` has been significantly enhanced with settings for parallel execution, configuration cach

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,18 +15,25 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.WeatherBold">
+        
+        <!-- Splash Screen - Launcher Activity -->
         <activity
-            android:name=".MainActivity"
+            android:name=".SplashActivity"
             android:exported="true"
-            android:resizeableActivity="true"
-            android:theme="@style/Theme.WeatherBold.NoActionBar"
-            tools:targetApi="24">
+            android:theme="@style/Theme.WeatherBold.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <!-- Main Activity -->
+        <activity
+            android:name=".MainActivity"
+            android:exported="false"
+            android:resizeableActivity="true"
+            android:theme="@style/Theme.WeatherBold.NoActionBar"
+            tools:targetApi="24" />
     </application>
 
 </manifest>
