--- a/gradle.properties
+++ b/gradle.properties
@@ -8,12 +8,13 @@
 
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx4096m -XX:MaxMetaspaceSize=1024m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8 -XX:+UseParallelGC
 
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 org.gradle.parallel=true
+org.gradle.daemon=true
 
 # AndroidX package structure to make it clearer which packages are bundled with the
 # Android operating system, and which are packaged with your app's APK
@@ -34,6 +35,20 @@ org.gradle.caching=true
 # Enable configuration cache
 org.gradle.configuration-cache=true
 
-# Kapt settings
+# Kapt settings for faster annotation processing
 kapt.use.worker.api=true
 kapt.incremental.apt=true
+kapt.include.compile.classpath=false
+
+# Kotlin incremental compilation
+kotlin.incremental=true
+kotlin.incremental.jvm=true
+
+# Disable unnecessary build features
+android.defaults.buildfeatures.aidl=false
+android.defaults.buildfeatures.renderscript=false
+android.defaults.buildfeatures.resvalues=false
+android.defaults.buildfeatures.shaders=false
+
+# Enable R8 full mode
+android.enableR8.fullMode=true
